--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,6 @@ body {
 
 .navbar-light .navbar-nav .nav-link:hover {
   color: #000099;
-  font-weight: 500;
 }
 
 /* #endregion */
@@ -501,7 +500,6 @@ body {
 
 .menu-link:hover {
   color: #000099;
-  font-weight: 500;
 }
 
 .social-links {
@@ -516,6 +514,15 @@ body {
 }
 
 .social-link:hover {
+  color: #000099;
+}
+
+.footer-link {
+  text-decoration: none;
+  color: #333399;
+}
+
+.footer-link:hover {
   color: #000099;
 }
 
